Changes after 2.4.2:

- CPU
  - Bugfixes for CPU emulation correctness
  - Fixed Bochs crash when accessing the first byte above emulated memory size
  - Implemented PCLMULQDQ AES instruction

- Internal Debugger
  - Introduced range read/write physical watchpoints

- Cleanup configure options
  - Make --ignore-bad-msrs runtime option in .bochsrc. Old --ignore-bad-msrs
    configure option is deprecated and should not be used anymore.
  - Local APIC configure option --enable-apic is deprecated and should not
    be used anymore. The LAPIC option now automatically determined from
    other configure options.
  - Extended --enable-sse configure option to accept any of possible existing
    SSE configurations (sse1/sse2/sse3/ssse3/sse4_1/sse4_2). Configure option
    --enable-sse-extension is deprecated and should not be used anymore.

- I/O Devices
  - USB HP DeskJet 920C printer device emulation (Ben Lunt)

- BIOS
  - Fix MSR_MTRRdefType configuration (prevented boot of modern Linux kernels)
  - Fix interrupt vectors for INT 60h-66h (reserved for user interrupt) by
    setting them to zero

- these S.F. bugs were closed/fixed
 [2790768] Memory corruption with SMP > 32, Panic BIOS Keyboard Error
 [2902118] interrupts vectors 0x60 to 67 should be NULL !
 [2912502] Instruction Pointer behaving erratically
 [2901047] Bochs crashed, closed by guest os
 [2905385] Bochs crash
 [2901481] Instruction SYSRET and SS(PL)
 [2900632] Broken long mode RETF to outer priviledge with null SS
 [1429011] Use bx_phyaddr_t for physaddr vars and bx_adress for lin adr

-------------------------------------------------------------------------
Changes in 2.4.2 (November 12, 2009):

- CPU and internal debugger
  - VMX: Implemented TPR shadow VMEXIT
  - Bugfixes for CPU emulation correctness (mostly for VMX support).
  - Bugfixes and updates for Bochs internal debugger
    - On SMP system stepN command now affects only current processor

- Memory