@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: descriptor.h,v 1.34 2009-12-27 16:53:35 sshwarts Exp $
+// $Id: descriptor.h,v 1.35 2009-12-28 09:26:22 sshwarts Exp $
 /////////////////////////////////////////////////////////////////////////
 //
 //   Copyright (c) 2007-2009 Stanislav Shwartsman
@@ -191,5 +191,6 @@ typedef struct {
 void  parse_selector(Bit16u raw_selector, bx_selector_t *selector);
 Bit8u get_ar_byte(const bx_descriptor_t *d);
 void  set_ar_byte(bx_descriptor_t *d, Bit8u ar_byte);
+void  parse_descriptor(Bit32u dword1, Bit32u dword2, bx_descriptor_t *temp);
 
 #endif
